<resources>
    <string name="app_name">My Application</string>
    <string name="some_description">some description</string>
    <string name="details">Details</string>
    <string name="caramel_frappuccino">Caramel Frappuccino</string>
    <string name="best_deals">best deals</string>
    <string name="_30_00">$30.00</string>
    <string name="tall">Tall</string>
    <string name="size_options">Size Options</string>
    <string name="_12_fi_oz">12 FI Oz</string>
    <string name="minus">-</string>
    <string name="add_to_order">Add to Order</string>
</resources>